tests/baselines/reference/constEnumErrors.errors.txt
tests/cases/compiler/constEnumErrors.ts(1,12): error TS2300: Duplicate identifier 'E'.
tests/cases/compiler/constEnumErrors.ts(5,8): error TS2300: Duplicate identifier 'E'.
tests/cases/compiler/constEnumErrors.ts(12,9): error TS2651: A member initializer in a enum declaration cannot reference members declared after it, including members defined in other enums.
tests/cases/compiler/constEnumErrors.ts(14,9): error TS2474: In 'const' enum declarations member initializer must be constant expression.
tests/cases/compiler/constEnumErrors.ts(15,10): error TS2474: In 'const' enum declarations member initializer must be constant expression.
tests/cases/compiler/constEnumErrors.ts(22,13): error TS2476: A const enum member can only be accessed using a string literal.
tests/cases/compiler/constEnumErrors.ts(24,13): error TS2476: A const enum member can only be accessed using a string literal.
tests/cases/compiler/constEnumErrors.ts(26,9): error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
tests/cases/compiler/constEnumErrors.ts(27,10): error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
tests/cases/compiler/constEnumErrors.ts(34,5): error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
tests/cases/compiler/constEnumErrors.ts(39,1): error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
tests/cases/compiler/constEnumErrors.ts(40,1): error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
tests/cases/compiler/constEnumErrors.ts(48,9): error TS2477: 'const' enum member initializer was evaluated to a non-finite value.
tests/cases/compiler/constEnumErrors.ts(49,9): error TS2477: 'const' enum member initializer was evaluated to a non-finite value.
tests/cases/compiler/constEnumErrors.ts(50,9): error TS2478: 'const' enum member initializer was evaluated to disallowed value 'NaN'.


==== tests/cases/compiler/constEnumErrors.ts (15 errors) ====
    const enum E {
               ~
!!! error TS2300: Duplicate identifier 'E'.
        A
    }
    
    module E {
           ~
!!! error TS2300: Duplicate identifier 'E'.
        var x = 1;
    }
    
    const enum E1 {
        // illegal case
        // forward reference to the element of the same enum
        X = Y, 
            ~
!!! error TS2651: A member initializer in a enum declaration cannot reference members declared after it, including members defined in other enums.
        // forward reference to the element of the same enum
        Y = E1.Z,
            ~~~~
!!! error TS2474: In 'const' enum declarations member initializer must be constant expression.
        Y1 = E1["Z"]
             ~~~~~~~
!!! error TS2474: In 'const' enum declarations member initializer must be constant expression.
    }
    
    const enum E2 {
        A
    }
    
    var y0 = E2[1]
                ~
!!! error TS2476: A const enum member can only be accessed using a string literal.
    var name = "A";
    var y1 = E2[name]; // error
                ~~~~
!!! error TS2476: A const enum member can only be accessed using a string literal.
    
    var x = E2; // error
            ~~
!!! error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
    var y = [E2]; // error
             ~~
!!! error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
    var enumType: typeof E2;
    var enumMember: typeof E2.A;
    
    function foo(t: any): void {
    }
    
    foo(E2); // error
        ~~
!!! error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
    
    namespace N {
        export const enum E { }
    }
    N.E; // error
    ~~~
!!! error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
    N["E"] // error
    ~~~~~~
!!! error TS2475: A 'const' enum is only allowed in a property access, import declaration, export assignment, or type query.
    
    const enum NaNOrInfinity {
        A = 9007199254740992,
        B = A * A,
        C = B * B,
        D = C * C,
        E = D * D,
        F = E * E, // overflow
            ~~~~~
!!! error TS2477: 'const' enum member initializer was evaluated to a non-finite value.
        G = 1 / 0, // overflow
            ~~~~~
!!! error TS2477: 'const' enum member initializer was evaluated to a non-finite value.
        H = 0 / 0  // NaN
            ~~~~~
!!! error TS2478: 'const' enum member initializer was evaluated to disallowed value 'NaN'.
    }